--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <img src="img/12313123123123123.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Student &amp; Drug Developer.</h3>
+            <h3>Student &amp; Drug Developer...</h3>
             <p class="fst-italic">
             </p>
             <div class="row">
@@ -131,7 +131,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>This is my stat for each subject.</p>
+          <p>This is my stat for each subject...</p>
         </div>
 
         <div class="row skills-content">
